<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/vasa_narudzba"
            android:id="@+id/tvTitle"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:textSize="28sp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="0.8">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainTable">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tableHeader">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="0.2"
                    android:text="@string/naziv"
                    android:id="@+id/tvNaziv"
                    android:layout_column="0"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="0.2"
                    android:text="@string/kolicina"
                    android:id="@+id/tvKolicina"
                    android:layout_column="1"
                    android:gravity="center" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="0.2"
                    android:text="@string/cijena_kom"
                    android:id="@+id/tvCijenaKom"
                    android:layout_column="2"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="0.2"
                    android:text="@string/cijena"
                    android:id="@+id/tvCijena"
                    android:layout_column="3"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvEmpty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_weight="0.2"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/initRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/nema_artikala"
                    android:id="@+id/tvNemaArtikala"
                    android:layout_column="5"
                    android:textSize="20sp"
                    android:padding="8dp" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ukupna_cijena"
            android:id="@+id/tvCijenaUk"
            android:paddingLeft="4dp"
            android:gravity="center"
            android:layout_weight="0.2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.00 kn"
            android:id="@+id/tvCijenaUkIznos"
            android:gravity="center"
            android:layout_weight="0.2"
            android:textSize="20sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dodaj1"
            android:id="@+id/btnDodaj1"
            android:layout_weight="0.2"
            android:onClick="dodaj1Click"
            android:textSize="18sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dodaj2"
            android:id="@+id/btnDodaj2"
            android:layout_weight="0.2"
            android:onClick="dodaj2Click"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/naruci"
            android:id="@+id/btnNaruci"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>