<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew1Activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/oblikuj"
            android:id="@+id/tvOblikuj"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip_palacinke"
            android:id="@+id/tvTip"
            android:padding="4dp"
            android:layout_marginLeft="8dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgTip">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/obicna"
                android:id="@+id/rbObicna"
                android:layout_weight="0.5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pohana"
                android:id="@+id/rbPohana"
                android:layout_weight="0.5" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prilozi"
                    android:id="@+id/tvPrilozi"
                    android:padding="4dp"
                    android:layout_marginLeft="8dp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/svPrilozi"
                    android:layout_marginLeft="8dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/llvPrilozi"></LinearLayout>
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.4"></LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cijena_palacinke"
            android:id="@+id/tvCijenaPalacinke"
            android:layout_weight="0.4"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.00 kn"
            android:id="@+id/tvCijenaPalacinkeIznos"
            android:layout_weight="0.1"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dodaj"
            android:id="@+id/btnDodajPalacinku"
            android:textStyle="bold"
            android:layout_weight="0.25"
            android:onClick="btnDodajClick" />

        <Button
            android:id="@+id/btnOdustani"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:onClick="btnOdustaniClick"
            android:text="@string/odustani" />
    </LinearLayout>

</LinearLayout>