<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew2Activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/odaberite_zeljeni_artikl"
            android:id="@+id/tvTitle"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:onClick="btnKolicinaPlusClick">

            <TextView
                android:id="@+id/tvArtikl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:padding="4dp"
                android:text="@string/artikl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerMain"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kolicina"
                android:id="@+id/tvKolicina"
                android:padding="4dp"
                android:layout_marginLeft="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&lt;"
                    android:id="@+id/btnKolicinaMinus"
                    android:textSize="20sp"
                    android:onClick="btnKolicinaMinusClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="0"
                    android:id="@+id/tvKolicinaIznos"
                    android:padding="8dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:id="@+id/btnKolicinaPlus"
                    android:textSize="20sp"
                    android:onClick="btnKolicinaPlusClick" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/imageView"
                android:layout_weight="0.5" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/imageViewEmpty"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cijena_2tocka"
            android:id="@+id/tvCijenaPica"
            android:layout_weight="0.3"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.00 kn"
            android:id="@+id/tvCijenaPicaIznos"
            android:layout_weight="0.2"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dodaj"
            android:id="@+id/btnDodaj"
            android:textStyle="bold"
            android:layout_weight="0.25"
            android:onClick="btnDodajClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/odustani"
            android:id="@+id/btnOdustani"
            android:layout_weight="0.25"
            android:onClick="btnOdustaniClick" />

    </LinearLayout>

</LinearLayout>